--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 
-db="mongodb+srv://c:c@cluster0.otaez.mongodb.net/crud?retryWrites=true&w=majority"
+db="mongodb+srv://a:a@cluster0.0w9drsy.mongodb.net/?retryWrites=true&w=majority"
